Update title and registration details in irtalk.html

--- a/irtalk.html
+++ b/irtalk.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>NSL IR Talk - LIFF Registration</title>
+  <title>NSL IR Connect - Registration</title>
 
   <!-- LIFF SDK -->
   <script src="https://static.line-scdn.net/liff/edge/2/sdk.js"></script>
@@ -79,7 +79,8 @@
 <body>
   <div class="wrap">
     <div class="card">
-      <h1>ลงทะเบียนเข้าร่วม IR Talk (Online)</h1>
+      <h1>ลงทะเบียนเข้าร่วม Building the Trust: Strategic Operational Excellence & ESG Sustainability
+(Online Event)</h1>
       <div class="muted">
         กรุณากรอกข้อมูลให้ครบถ้วน จากนั้นระบบจะส่งลิงก์ Microsoft Teams กลับผ่าน LINE อัตโนมัติ
       </div>
@@ -93,7 +94,7 @@
       <div class="row">
         <div>
           <label>ชื่อ-นามสกุล *</label>
-          <input id="fullName" type="text" placeholder="เช่น จริยา ใจไม่ดี" />
+          <input id="fullName" type="text" placeholder="เช่น วินัย ใจดี" />
         </div>
 
         <div class="grid2">
